--- a/about.html
+++ b/about.html
@@ -92,7 +92,10 @@
     </nav>
 
     <h1>About Me</h1>
-    <p>Hi! I'm Devesh Patel, a passionate 20-year-old Computer Science student based in London. I love building innovative solutions and exploring new technologies. I’m currently pursuing a Bachelor’s degree in Computer Science at Swansea University, and I’m deeply interested in the fields of Crypto, AI, and Fintech. My portfolio showcases a variety of projects that reflect my technical ability and creativity.</p>
+    <p>Hi! I'm Devesh Patel, a passionate 21-year-old Computer scientist based in London. I love building innovative 
+solutions and exploring new technologies. You can check out my projects on my website, which also showcases 
+my programming skills. I recently graduated with a bachelor’s degree in computer science from Swansea 
+University and I’m currently passionate about Crypto, AI and fintech.</p>
   </div>
 
   <script>
