--- a/education.html
+++ b/education.html
@@ -96,12 +96,14 @@
     </nav>
 
     <h1>Education</h1>
-    <p><strong>BSc Computer Science (Predicted 2:1)</strong><br>
+    <p><strong>BSc Computer Science (High 2:1, 68.14%)</strong><br>
     Swansea University, 2022 – 2025</p>
 
-    <p><strong>Modules:</strong> Web Application Development (94%), Mobile App Development (74%), Embedded Systems Design (65%), Video Game Programming, Cryptography and IT-Security, Advanced Object-Oriented Programming,</p>
+    <p><strong>Modules:</strong>Advanced Object-Oriented Programming (64%), Video Games Programming
+(73%), Writing Mobile Apps (74%), Web Application Development (94%) , Embedded Systems 
+Design (65%)</p>
 
-    <p><strong>Final Year Project:</strong> Deep Learning-Based Chatbot</p>
+    <p><strong>Final Year Project:</strong>Deep learning based chatbot (78%, 65%)</p>
   </div>
 
   <script>
