--- a/projects.html
+++ b/projects.html
@@ -148,7 +148,7 @@
       <div class="project-desc">
         Space Wars is an action-packed game created using Unity, inspired by the classic Missile Command. In this game, players take on the role of defending planets from waves of UFOs using powerful lasers. The objective is to protect the planets by strategically firing lasers to destroy incoming UFOs and threats. As the game progresses, the waves become more challenging, requiring quick reflexes and smart tactics to fend off increasingly difficult enemies. Space Wars offers an exciting and immersive experience where players must protect their planets using laser-based defense in a fast-paced, action-packed environment.
         <div class="github-link">
-          <a href="#" target="_blank">GitHub Repository</a>
+          <a href="https://github.com/D3v3shPat3l/SpaceWars" target="_blank">GitHub Repository</a>
         </div>
       </div>
     </div>
@@ -159,7 +159,7 @@
       <div class="project-desc">
         PennBot is an AI-powered chatbot developed for the University of Pennsylvania, designed to provide fast and efficient responses to frequently asked questions and assist with easy navigation through the university's website. Built using Python, natural language processing, deep learning, neural networks, and a finite state machine, PennBot ensures smooth and context-aware conversations. The FSM helps the bot manage different states of interaction, improving its ability to handle various types of queries. By offering quicker and more accurate answers than the traditional email support system, PennBot enhances the user experience, making it easier for students, faculty, and visitors to find the information they need in real-time.
         <div class="github-link">
-          <a href="#" target="_blank">GitHub Repository</a>
+          <a href="https://github.com/D3v3shPat3l/pennbot" target="_blank">GitHub Repository</a>
         </div>
       </div>
     </div>
